Move up to first call instruction on clib program

--- a/meson.build
+++ b/meson.build
@@ -24,3 +24,4 @@ executable('thingy', ['main.c'], link_with: [lib])
 # testing programs
 subdir('tests')
 
+executable('ptraceomatic', ['ptraceomatic.c'], link_with: [lib])
