--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,2 +1,3 @@
 executable('hello', ['hello.c'], c_args: ['-m32'], link_args: ['-m32', '-nostdlib'])
-executable('hello-clib-static', ['hello-clib.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
+executable('hello-libc-static', ['hello-clib.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
+executable('hello-libc', ['hello-clib.c'], c_args: ['-m32'], link_args: ['-m32'])
