--- a/tests/meson.build
+++ b/tests/meson.build
@@ -4,5 +4,5 @@ executable('hello-libc-static', ['hello-clib.c'], c_args: ['-m32'], link_args: [
 executable('hello-libc', ['hello-clib.c'], c_args: ['-m32'], link_args: ['-m32'])
 
 # simple benchmark
-executable('looper', ['looper.c', 'nothing.c'], c_args: ['-m32'], link_args: ['-m32'])
+executable('looper', ['looper.c', 'nothing.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
 executable('fibbonaci', ['fibbonaci.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
