--- a/tests/meson.build
+++ b/tests/meson.build
@@ -6,3 +6,6 @@ executable('hello-libc', ['hello-clib.c'], c_args: ['-m32'], link_args: ['-m32']
 # simple benchmark
 executable('looper', ['looper.c', 'nothing.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
 executable('fibbonaci', ['fibbonaci.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
+
+# filesystem motivation
+executable('cat', ['cat.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
