Make Hello World with libc and ld work
IF you want to understand how amazing this is, watch https://www.twitch.tv/videos/152115137

--- a/meson.build
+++ b/meson.build
@@ -45,4 +45,4 @@ subdir('tests')
 # ptraceomatic et al
 subdir('tools')
 
-executable('thingy', ['main.c'], dependencies: [ish])
+executable('ish', ['main.c'], dependencies: [ish])
