--- a/tests/meson.build
+++ b/tests/meson.build
@@ -4,9 +4,9 @@ executable('hello-libc-static', ['hello-clib.c'], c_args: ['-m32'], link_args: [
 executable('hello-libc', ['hello-clib.c'], c_args: ['-m32'], link_args: ['-m32'])
 
 # simple benchmark
-executable('looper', ['looper.c', 'nothing.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
-executable('fibbonaci', ['fibbonaci.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
+executable('looper', ['looper.c', 'nothing.c'], c_args: ['-m32'], link_args: ['-m32'])
+executable('fibbonaci', ['fibbonaci.c'], c_args: ['-m32'], link_args: ['-m32'])
 
 # filesystem motivation
-executable('cat', ['cat.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
-executable('stat', ['stat.c'], c_args: ['-m32', '-D_FILE_OFFSET_BITS=64'], link_args: ['-m32', '-static'])
+executable('cat', ['cat.c'], c_args: ['-m32'], link_args: ['-m32'])
+executable('stat', ['stat.c'], c_args: ['-m32', '-D_FILE_OFFSET_BITS=64'], link_args: ['-m32'])
