--- a/tests/meson.build
+++ b/tests/meson.build
@@ -10,3 +10,7 @@ executable('fibbonaci', ['fibbonaci.c'], c_args: ['-m32'], link_args: ['-m32'])
 # filesystem motivation
 executable('cat', ['cat.c'], c_args: ['-m32'], link_args: ['-m32'])
 executable('stat', ['stat.c'], c_args: ['-m32', '-D_FILE_OFFSET_BITS=64'], link_args: ['-m32'])
+
+custom_target('busybox', input: ['get-busybox.sh'], output: ['busybox'],
+    command: [find_program('get-busybox.sh')],
+    build_by_default: true)
