--- a/tests/meson.build
+++ b/tests/meson.build
@@ -12,6 +12,8 @@ executable('cat', ['cat.c'], c_args: ['-m32'], link_args: ['-m32'])
 executable('stat', ['stat.c'], c_args: ['-m32', '-D_FILE_OFFSET_BITS=64'], link_args: ['-m32'])
 executable('getdents', ['getdents.c'], c_args: ['-m32'], link_args: ['-m32'])
 
+executable('signal', ['signal.c'], c_args: ['-m32'], link_args: ['-m32', '-static'])
+
 custom_target('busybox', input: ['get-busybox.sh'], output: ['busybox'],
     command: [find_program('get-busybox.sh')],
     build_by_default: true)
