Start working on signal handling, completely refactor cpu emulator, and fix qemu test program compiling on clang

--- a/tools/meson.build
+++ b/tools/meson.build
@@ -3,7 +3,7 @@ transplant_src = [
     'ptutil.c',
     cified_vdso,
 ]
-executable('ptraceomatic', ['ptraceomatic.c', transplant_src], dependencies: [ish])
+executable('ptraceomatic', ['ptraceomatic.c', 'undefined-flags.c', transplant_src], dependencies: [ish])
 
 # tools for messing with vdsos
 executable('vdso-dump', ['vdso-dump.c'], c_args: ['-m32'], link_args: ['-m32'])
