--- a/tests/meson.build
+++ b/tests/meson.build
@@ -17,6 +17,5 @@ executable('signal', ['signal.c'], c_args: ['-m32'], link_args: ['-m32', '-stati
 # qemu test program
 executable('qemu-test', ['qemu-test.c'], c_args: ['-m32'], link_args: ['-m32', '-lm'])
 
-custom_target('busybox', input: ['get-busybox.sh'], output: ['busybox'],
-    command: [find_program('get-busybox.sh')],
-    build_by_default: true)
+run_target('busybox',
+    command: ['get-busybox.sh'])
