--- a/tools/meson.build
+++ b/tools/meson.build
@@ -6,6 +6,8 @@ transplant_src = [
 executable('ptraceomatic', ['ptraceomatic.c', 'undefined-flags.c', transplant_src], dependencies: [ish, threads])
 configure_file(input: 'ptraceomatic-gdb.gdb', output: '@PLAINNAME@', configuration: configuration_data())
 
+executable('xattrify_fs', ['xattrify_fs.c'])
+
 # tools for messing with vdsos
 executable('vdso-dump', ['vdso-dump.c'], c_args: ['-m32'], link_args: ['-m32'])
 executable('vdso-transplant', ['vdso-transplant-main.c', transplant_src],
