Add super shitty poll implementation

--- a/meson.build
+++ b/meson.build
@@ -44,7 +44,9 @@ sys_src = [
     'fs/generic.c',
     'fs/path.c',
     'fs/real.c',
-    'fs/dev.c'
+    'fs/dev.c',
+
+    'sys/poll.c'
 ]
 emu_src = [
     'emu/memory.c',
