--- a/meson.build
+++ b/meson.build
@@ -43,7 +43,6 @@ sys_src = [
     'fs/stat.c',
     'fs/dir.c',
     'fs/generic.c',
-    'fs/path.c',
     'fs/real.c',
     'fs/poll.c',
 
@@ -51,7 +50,9 @@ sys_src = [
     'fs/tty.c',
     'fs/tty-real.c',
 
-    'sys/poll.c'
+    'sys/poll.c',
+
+    'util/getpath.c'
 ]
 emu_src = [
     'emu/memory.c',
