--- a/meson.build
+++ b/meson.build
@@ -38,7 +38,7 @@ sys_src = [
     'sys/tls.c',
     'sys/getset.c',
     'sys/signal.c',
-    'sys/net.c',
+    'sys/sock.c',
 
     'sys/fs.c',
     'fs/stat.c',
