Build the vdso with a custom target
This allows compiling the project but not the vdso with things like asan or afl.

--- a/vdso/meson.build
+++ b/vdso/meson.build
@@ -1,4 +1,8 @@
 # the vdso
-vdso = shared_library('vdso', ['vdso.S', 'vdso.c', 'note.S'], c_args: ['-m32'],
-    link_args: ['-m32', '-nostdlib', '-Wl,-T,../vdso/vdso.lds'],
-    link_depends: ['vdso.lds'])
+# I can't use shared_library for this because then I have to use the same
+# compiler and options as the rest of the project which prevents me from using
+# sanitizers and afl
+vdso = custom_target('vdso', input: ['vdso.S', 'vdso.c'], output: 'libvdso.so',
+    command: [get_option('vdso_cc'), '-o', '@OUTPUT@', '@INPUT@',
+        '-m32', '-nostdlib', '-Wl,-T,../vdso/vdso.lds', '-shared', '-fPIC']
+        + get_option('vdso_c_args').split())
