--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,5 @@
 option('log', type: 'string', value: '')
 option('nolog', type: 'string', value: '')
+
+option('vdso_cc', type: 'string', value: 'cc')
+option('vdso_c_args', type: 'string', value: '')
