--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,3 +3,5 @@ option('nolog', type: 'string', value: '')
 
 option('vdso_cc', type: 'string', value: 'cc')
 option('vdso_c_args', type: 'string', value: '')
+
+option('no_crlf', type: 'boolean', value: false)
