--- a/tools/meson.build
+++ b/tools/meson.build
@@ -9,7 +9,7 @@ if build_machine.system() == 'linux'
     configure_file(input: 'ptraceomatic-gdb.gdb', output: '@PLAINNAME@', configuration: configuration_data())
 
     # tools for messing with vdsos
-    executable('vdso-dump', ['vdso-dump.c'], c_args: ['-m32'], link_args: ['-m32'])
+    # executable('vdso-dump', ['vdso-dump.c'], c_args: ['-m32'], link_args: ['-m32'])
     executable('vdso-transplant', ['vdso-transplant-main.c', transplant_src],
         include_directories: includes)
 endif
