--- a/tools/meson.build
+++ b/tools/meson.build
@@ -5,7 +5,8 @@ if build_machine.system() == 'linux'
         'ptutil.c',
         cified_vdso,
     ]
-    executable('ptraceomatic', ['ptraceomatic.c', 'undefined-flags.c', transplant_src], dependencies: [ish, softfloat, threads])
+    executable('ptraceomatic', ['ptraceomatic.c', 'undefined-flags.c', transplant_src],
+        dependencies: [ish, softfloat, threads, dbm])
     configure_file(input: 'ptraceomatic-gdb.gdb', output: '@PLAINNAME@', configuration: configuration_data())
 
     # tools for messing with vdsos
@@ -13,5 +14,3 @@ if build_machine.system() == 'linux'
     executable('vdso-transplant', ['vdso-transplant-main.c', transplant_src],
         include_directories: includes)
 endif
-
-executable('xattrify_fs', ['xattrify_fs.c'], include_directories: includes)
