Attempt to handle NDBM header file having a different name on Debian

--- a/meson.build
+++ b/meson.build
@@ -76,7 +76,19 @@ cc = meson.get_compiler('c')
 threads = dependency('threads')
 librt = cc.find_library('rt', required: false)
 softfloat = subproject('softfloat').get_variable('softfloat_dep')
-dbm = [cc.find_library('gdbm', required: false), cc.find_library('gdbm_compat', required: false)]
+
+# this is annoying af
+if host_machine.system() == 'darwin'
+    # no need to link to anything, berkeley db and its ndbm shim is part of the C library
+    dbm = []
+elif host_machine.system() == 'linux'
+    # we're going to use gdbm
+    dbm = [cc.find_library('gdbm'), cc.find_library('gdbm_compat')]
+    if not cc.find_header('ndbm.h') and cc.find_header('gdbm-ndbm.h')
+        # slight problem: on debian the header is called gdbm-ndbm.h for some reason
+        add_global_arguments('-DGDBM_NDBM=1', language: 'c')
+    endif
+endif
 
 libish = library('ish', src,
     include_directories: includes,
