Replace err_map(errno) with errno_map, and fix EPIPE handling

--- a/meson.build
+++ b/meson.build
@@ -46,6 +46,7 @@ cified_vdso = custom_target('cify-vdso',
 
 src = [
     'kernel/init.c',
+    'kernel/errno.c',
 
     'kernel/calls.c',
     'kernel/user.c',
