Add calls to get and set resource limits

--- a/meson.build
+++ b/meson.build
@@ -53,6 +53,7 @@ src = [
     'kernel/getset.c',
     'kernel/signal.c',
     'kernel/sock.c',
+    'kernel/rlimit.c',
 
     'kernel/fs.c',
     'fs/stat.c',
