Implement tracking of process cpu usage

--- a/meson.build
+++ b/meson.build
@@ -46,14 +46,13 @@ src = [
     'kernel/exec.c',
     'kernel/exit.c',
     'kernel/time.c',
-    'kernel/mm.c',
     'kernel/mmap.c',
     'kernel/uname.c',
     'kernel/tls.c',
     'kernel/getset.c',
     'kernel/signal.c',
     'kernel/sock.c',
-    'kernel/rlimit.c',
+    'kernel/resource.c',
 
     'kernel/fs.c',
     'fs/stat.c',
