Move pwd, root, uname out into its own struct

--- a/meson.build
+++ b/meson.build
@@ -54,6 +54,7 @@ src = [
     'kernel/resource.c',
 
     'kernel/fs.c',
+    'kernel/fs_info.c',
     'fs/fd.c',
     'fs/stat.c',
     'fs/dir.c',
