--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,5 +1,6 @@
 option('log', type: 'string', value: '')
 option('nolog', type: 'string', value: '')
+option('log_handler', type: 'string', value: 'dprintf')
 
 option('vdso_c_args', type: 'string', value: '')
 
