--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,6 +1,8 @@
 option('log', type: 'string', value: '')
 option('nolog', type: 'string', value: '')
 
+option('jit', type: 'boolean', value: false)
+
 option('vdso_c_args', type: 'string', value: '')
 
 option('no_crlf', type: 'boolean', value: false)
