--- a/meson.build
+++ b/meson.build
@@ -33,7 +33,7 @@ src = [
 
     'kernel/calls.c',
     'kernel/user.c',
-    'kernel/vdso.c',
+    'kernel/vdso.c', vdso,
     'kernel/task.c',
     'kernel/group.c',
 
