--- a/meson.build
+++ b/meson.build
@@ -93,6 +93,7 @@ if get_option('jit')
         'emu/gadgets-x86/entry.S',
         'emu/gadgets-x86/math.S',
         'emu/gadgets-x86/control.S',
+        'emu/gadgets-x86/memory.S',
         offsets,
     ]
 else
